crates/rolldown/tests/rolldown/errors/parse_error/jsx/main.jsx
export default function App() {
  let a = 1;

  return (
    <b>

    </a>
    <a class="the">

    </b>
  )
}